@@ -1,5 +1,8 @@
 Changelog for GEMC
 
+11/19/15
+- fixed vertex for cosmic rays
+
 11/18/15
 - added Trigger Summary plot and option in the dropdown menu
 
